# Agent-101

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
00_foundations/: 01_what_is_an_agent.md  02_tool_use.md  03_memory_types.md  04_design_patterns.md
01_langchain/01_react_agent/: agent.py
01_langchain/02_tool_calling/: agent.py
01_langchain/03_memory/: agent.py
01_raw_loop/: README.md
01_raw_loop/01_basic_loop/: agent.py
01_raw_loop/03_planning/: agent.py
01_raw_loop/04_subagents/: agent.py
01_raw_loop/06_context_mgmt/: agent.py
01_raw_loop/07_task_system/: agent.py
01_raw_loop/09_agent_teams/: agent.py
02_langchain/: README.md
02_langchain/04_rag_agent/: agent.py
02_langgraph/01_basic_graph/: graph.py
02_langgraph/02_react_agent/: agent.py
02_langgraph/04_multi_agent/: multi_agent.py
03_langgraph/: README.md
03_langgraph/03_supervisor_pattern/: supervisor.py
03_langgraph/05_human_in_the_loop/: hitl.py
03_strands/: README.md
03_strands/01_basic_agent/: agent.py
03_strands/02_tool_use/: agent.py
03_strands/03_multi_agent/: multi_agent.py
04_google_adk/: README.md
04_google_adk/01_basic_agent/: agent.py
04_google_adk/02_tool_use/: agent.py
04_google_adk/03_multi_agent/: multi_agent.py
05_mcp/: README.md
05_mcp/01_using_servers/: client.py
05_mcp/02_building_server/: server.py
05_mcp/03_agent_with_mcp/: agent.py
06_claude_code/: README.md
06_claude_code/01_basic_loop/: agent.py
06_claude_code/02_tool_use/: agent.py
06_claude_code/03_planning/: agent.py
06_claude_code/04_subagents/: agent.py
06_claude_code/05_skills/: agent.py
06_claude_code/06_context_mgmt/: agent.py
06_claude_code/07_task_system/: agent.py
06_claude_code/08_background/: agent.py
06_claude_code/09_agent_teams/: agent.py
07_computer_use/: README.md
07_computer_use/01_basic_loop/: agent.py
07_computer_use/02_two_stage/: agent.py
patterns/: README.md
patterns/multi_agent/: langchain_multi.py  langgraph_multi.py
patterns/plan_and_execute/: langchain_plan.py  langgraph_plan.py
(+9 files in other folders)
